<resources>
    <string name="app_name">BillScanner</string>

    <string name="scan_button_text">Skanuj</string>

    <string name="title_activity_ocrcapture">OCRCapture</string>
    <string name="title_activity_bill_acceptance">Sprawdź zeskanowany rachunek</string>

    <string name="ocr_snackbar">Szukanie tekstu&#8230; zrób zdjęcie po wykryciu</string>
    <string name="ocr_no_detection_toast">Nic nie widzę, spróbuj ponownie</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Potrzebny dostęp do kamery</string>
    <string name="no_camera_permission">Aplikacja nie może działać poprawnie bez dostępu do kamery! Nastąpi zamknięcie</string>
    <string name="low_storage_error">Aplikacja potrzebuje więcej wolnego miejsca na dysku!</string>
    <string name="read_text">Wykryj tekst</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Włącz latarkę</string>
    <string name="ocr_success">Odczytano tekst</string>
    <string name="ocr_failure">Nie wykryto tekstu</string>

    <string name="bill_loading">trwa przetwarzanie&#8230;</string>
    <string name="title_activity_test">test</string>
    <string name="title_home">Podsumowania</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="currency">zł</string>

    <string name="backdrop_info">Scanned bill</string>
    <string name="delete_product_button">delete product button</string>
    <string name="cardDateHeader">Data</string>
    <string name="cardSumHeader">Suma</string>
    <string name="cardCompanyHeader">Firma</string>
    <string name="cardAddressHeader">Adres</string>
    <string name="productCardLabel1">nazwa:</string>
    <string name="productCardLabel2">ilość:</string>
    <string name="productCardLabel3">cena:</string>
    <string name="productCardLabel4">Kategoria: </string>
    <string name="productCardButton1">Edytuj kategorie</string>
    <string name="productCardButton2">Dodaj produkt</string>

    <string name="categories_dialog_title">Edytor kategorii</string>
    <string name="categories_edit_dialog_button">Dodaj</string>

</resources>
